<resources>
    <string name="app_name">Forbidden Desert</string>

    <string name="forbidden_desert">Forbidden Desert</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="instructions">Instructions</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="novice">Novice</string>
    <string name="normal">Normal</string>
    <string name="expert">Expert</string>
    <string name="legendary">Legendary</string>
    <string name="choose">Choose</string>
    <string name="random">Random</string>
    <string name="number_of_players">Number Of Players</string>
    <string name="difficulty">Difficulty</string>
    <string name="role_selection">Role Selection</string>
    <string name="start_game">Start Game</string>
    <string name="archeologist">Archeologist</string>
    <string name="climber">Climber</string>
    <string name="explorer">Explorer</string>
    <string name="meteorologist">Meteorologist</string>
    <string name="navigator">Navigator</string>
    <string name="water_carrier">Water Carrier</string>
    <string name="move">Move</string>
    <string name="remove_sand">Remove Sand</string>
    <string name="excavate">Excavate</string>
    <string name="pick_up_a_part">Pick Up a Part</string>
    <string name="title_activity_instructions">InstructionsActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
